--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "nodemailer": "^6.7.7",
     "nodemon": "^2.0.19",
     "sequelize": "^6.21.3"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
   }
 }
